--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
 spring.application.name=ms-product
 server.port=8001
 
-#spring.config.import=optional:configserver:http://localhost:8888/
-spring.config.import=configserver:http://localhost:8888/
+spring.config.import=optional:configserver:http://localhost:8888/
+#spring.config.import=configserver:http://localhost:8888/
 
 management.endpoints.web.exposure.include=*
 
