--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=ms-product
 server.port=8001
 
-spring.config.import=optional:configserver:http://localhost:8888/
+spring.config.import=optional:configserver://eurekaserver:8888/
