push pal docker 3.0

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=ms-product
 server.port=8001
 
-spring.config.import=optional:configserver://configserver:8888/
+spring.config.import=configserver:http://configserver:8888/
