--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -2,4 +2,6 @@ spring.application.name=ms-product
 server.port=8001
 
 #spring.config.import=optional:configserver:http://localhost:8888/
-spring.config.import=optional:http://localhost:8888/
+spring.config.import=optional:configserver:https://lel-config-server.azurewebsites.net:443
+
+eureka.client.service-url.defaultZone=https://lel-eureka-server.azurewebsites.net:443/eureka
