improvement ms product and making tests

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 resilience4j:
   circuitbreaker:
     instances:
-      allProductFallBack:
+      allProductFallBackMethod:
         registerHealthIndicator: true
         eventConsumerBufferSize: 10
         automaticTransitionFromOpenToHalfOpenEnabled: true
