--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,9 @@
                 <sonar.host.url>
                     http://localhost:9000
                 </sonar.host.url>
+                <sonar.java.binaries>
+                    target
+                </sonar.java.binaries>
             </properties>
         </profile>
     </profiles>
